[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://BebasNeue-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.443137, 0.407843, 0.521569, 1 )

[node name="Score" type="Label" parent="."]
margin_left = 3.87704
margin_top = -1.29236
margin_right = 43.877
margin_bottom = 58.7076
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="GameOver" type="Label" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="RestartGame" type="Timer" parent="."]
pause_mode = 2
wait_time = 2.0

[node name="left" type="Button" parent="."]
margin_left = 0.507324
margin_top = 642.127
margin_right = 57.0
margin_bottom = 679.127
rect_pivot_offset = Vector2( 28.4927, 15.41 )
custom_fonts/font = SubResource( 3 )
text = "Left"

[node name="right" type="Button" parent="."]
margin_left = 0.507294
margin_top = 682.332
margin_right = 57.5073
margin_bottom = 719.332
rect_pivot_offset = Vector2( 28.4927, 15.41 )
custom_fonts/font = SubResource( 3 )
text = "Right"

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 634.669, 689.785 )

[node name="SpeedUpTimer" type="Timer" parent="."]
autostart = true

[node name="ColorChange" type="Timer" parent="."]
pause_mode = 2
wait_time = 20.0
autostart = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="RestartGame" to="." method="_on_RestartGame_timeout"]
[connection signal="button_down" from="left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="right" to="." method="_on_right_button_up"]
[connection signal="timeout" from="SpeedUpTimer" to="." method="_on_SpeedUpTimer_timeout"]
[connection signal="timeout" from="ColorChange" to="." method="_on_ColorChange_timeout"]
